bug fixed locomotive animation of home page removed due to layout problem

--- a/src/Pages/about/about.css
+++ b/src/Pages/about/about.css
@@ -1,8 +1,7 @@
 .aboutmain{
     width: 100%;
     height: 100vh;
-    padding-top: 10%;
-    margin-bottom: 10%;
+    background-color: white;
 }
 .aboutrow{
     display: flex;
